# enoughbar

./: LICENSE  Makefile  README.md  global.d.ts  meson.build  meson.options
src/: App.ts  gresource.xml  meson.build  style.css  types.ts  utils.ts
src/common/: IntegerObject.ts
src/components/: Bar.blp  Bar.ts  Battery.blp  BatteryComponent.ts  Bluetooth.blp  Bluetooth.ts  Clock.blp  Clock.ts  ClockComponent.ts  MediaPlayer.blp  MediaPlayer.ts  Network.blp  Network.ts  Notification.blp  Notification.ts  NotificationBox.blp  NotificationBox.ts  NotificationComponent.ts  NotificationPopup.blp  NotificationPopup.ts  NotificationRow.blp  NotificationRow.ts  System.blp  System.ts  Tray.ts  TrayComponent.ts  Volume.blp  Volume.ts  Workspace.ts  WorkspaceComponent.ts
